[project]
name = "compliance-checks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-pubsub>=2.31.1",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=3.3.0",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]
